// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword page should match snapshot 1`] = `
<Fragment>
  <div
    id="reset-password-body"
  >
    <BasicNav
      brandName="Author's Haven"
      logo="test-file-stub"
    />
    <div
      className="container"
      id="reset-password-container"
    >
      <h4
        id="psw-title"
      >
        RESET PASSWORD
      </h4>
      <form
        onSubmit={[Function]}
      >
        <InputField
          id="email-input"
          label="Enter Your Email"
          name="email"
          onChange={[Function]}
          type="email"
          value=""
        />
        <InputField
          disabled={false}
          label=""
          name=""
          style={null}
          type="submit"
          value="SEND"
        />
        <i
          className=""
          id="spinner"
        />
      </form>
    </div>
  </div>
  <Brand />
</Fragment>
`;

exports[`ResetPasswords page should match snapshot 1`] = `
<Fragment>
  <div
    id="reset-password-final-body"
  >
    <BasicNav
      brandName="Author's Haven"
      logo="test-file-stub"
    />
    <div
      className="container"
      id="reset-password-container"
    >
      <h4
        id="psw-title"
      >
        RESET PASSWORD
      </h4>
      <form
        onSubmit={[Function]}
      >
        <InputField
          className="password-input"
          label="New Password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <InputField
          className="password-input"
          label="Confirm New Password"
          name="confirmPassword"
          onChange={[Function]}
          type="password"
          value=""
        />
        <InputField
          disabled={false}
          label=""
          name=""
          style={null}
          type="submit"
          value="SAVE"
        />
        <i
          className=""
          id="spinner"
        />
      </form>
    </div>
  </div>
  <Brand />
</Fragment>
`;
